ovim/tests/snapshots/macro_test__at_at_repeat_last.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 4

Buffer:


[c]
d
