ovim/tests/snapshots/macro_test__macro_line_operations.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[ ]
