ovim/tests/snapshots/macro_test__macro_then_undo.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:

[b]
c
