ovim/tests/snapshots/macro_test__macro_with_count_inside.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[g]h
