ovim/tests/snapshots/macro_test__macro_with_visual_mode.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:


[t]est
