ovim/tests/snapshots/macro_test__overwrite_macro_register.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
NEWNEW[ ] est
