ovim/tests/snapshots/macro_test__q_record_and_playback.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[l]ine 3
