ovim/tests/snapshots/macro_test__q_record_change_operation.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
Xtwo
[X]e
