ovim/tests/snapshots/macro_test__recursive_macro.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 4

Buffer:

[b]
c
d
